wip - figuring things out

--- a/manifest.json
+++ b/manifest.json
@@ -10,14 +10,27 @@
   "permissions": [
     "tabs"
   ],
-  "content_scripts": [
-    {
-      "matches": [
-        "*://*.mozilla.org/*"
-      ],
-      "js": [
-        "borderify.js"
-      ]
+  "background": {
+    "scripts": [
+      "background.js"
+    ]
+  },
+  "commands": {
+    "toggle-feature": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+Y"
+      },
+      "description": "Send a 'toggle-feature' event to the extension"
+    },
+    "_execute_action": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+Space"
+      },
+      "description": "Send a '_execute_action' event to the extension"
     }
-  ]
+  },
+  "options_ui": {
+    "page": "options.html",
+    "browser_style": true
+  }
 }
