--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,10 @@
       "background.js"
     ]
   },
+  "browser_action": {
+    "default_icon": "icons/tabeurator-32.png",
+    "default_popup": "search_box.html"
+  },
   "commands": {
     "foo-bar": {
       "suggested_key": {
@@ -22,7 +26,7 @@
       },
       "description": "Send a 'toggle-feature' event to the extension"
     },
-    "tab-search": {
+    "_execute_browser_action": {
       "suggested_key": {
         "default": "Ctrl+Shift+Space"
       },
