--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+########################################
+# Firefox extension initial .gitignore #
+########################################
+
+
 # Logs
 logs
 *.log
@@ -86,3 +91,30 @@ typings/
 
 # DynamoDB Local files
 .dynamodb/
+
+
+
+##################
+# React specific #
+##################
+
+# dependencies
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
