eject from create react app
and a bunch of little steps in the right direction

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+dist/
+
 ########################################
 # Firefox extension initial .gitignore #
 ########################################
