lots of small stuff
* watch mode for development
* refactoring of sorting
* message panel to display messages to user

--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "webpack --mode development",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "watch": "webpack --mode development --watch"
   },
   "eslintConfig": {
     "extends": [
