--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Tabeurator",
-  "version": "1.0",
-  "description": "Adds a red border to all webpages matching mozilla.org.",
+  "version": "0.1",
+  "description": "Simplifying Tab Search and Navigation",
   "icons": {
     "48": "tabeurator-48.png",
     "96": "tabeurator-96.png"
@@ -12,23 +12,23 @@
     "tabs"
   ],
   "background": {
-    "scripts": [
-      "background.js"
-    ]
+    "service_worker": "background.js"
   },
-  "browser_action": {
+  "action": {
     "default_icon": "tabeurator-48.png"
   },
   "commands": {
-    "_execute_browser_action": {
+    "_execute_action": {
       "suggested_key": {
-        "default": "Ctrl+Space"
+        "default": "Ctrl+Space",
+        "mac": "MacCtrl+Space"
       },
       "description": "Tab Search"
     },
     "previous_tab": {
       "suggested_key": {
-        "default": "Ctrl+Shift+Space"
+        "default": "Ctrl+Shift+Space",
+        "mac": "MacCtrl+Shift+Space"
       },
       "description": "Go To Previous Tab (Most Recently Visited)"
     }
