--- a/package.json
+++ b/package.json
@@ -69,10 +69,12 @@
     "workbox-webpack-plugin": "^6.4.1"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "webpack --mode development",
-    "test": "node scripts/test.js",
-    "watch": "webpack --mode development --watch"
+    "build:chrome": "cross-env TARGET_BROWSER=v3 webpack --mode development",
+    "build:firefox": "cross-env TARGET_BROWSER=v2 webpack --mode development",
+    "watch:chrome": "cross-env TARGET_BROWSER=v3 webpack --mode development --watch",
+    "watch:firefox": "cross-env TARGET_BROWSER=v2 webpack --mode development --watch",
+    "bundle:chrome": "cross-env TARGET_BROWSER=v3 webpack --mode production",
+    "bundle:firefox": "cross-env TARGET_BROWSER=v2 webpack --mode production"
   },
   "eslintConfig": {
     "extends": [
@@ -96,6 +98,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/webextension-polyfill": "^0.10.7",
     "copy-webpack-plugin": "^12.0.2",
+    "cross-env": "^7.0.3",
     "ts-loader": "^9.5.1",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
