--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "copy-webpack-plugin": "^12.0.2",
     "cross-env": "^7.0.3",
     "ts-loader": "^9.5.1",
+    "web-ext": "^7.11.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   },
