initial work, displays in firefox
just copied search window to sidebar for now, will refactor as I figure out what components need to be shared and all that

--- a/public/manifest.v2.json
+++ b/public/manifest.v2.json
@@ -33,7 +33,17 @@
         "mac": "MacCtrl+Shift+Space"
       },
       "description": "Go To Previous Tab (Most Recently Visited)"
+    },
+    "toggle_sidebar": {
+      "suggested_key": {
+        "default": "Ctrl+Alt+Space",
+        "mac": "MacCtrl+Alt+Space"
+      },
+      "description": "Toggle Sidebar"
     }
+  },
+  "sidebar_action": {
+    "default_panel": "sidebar.html"
   },
   "options_ui": {
     "page": "optionsPane.html",
