more work for side panel on chrome
chrome may be more limited on what the side panel will be able to do and how it can be used, need to start thinking more about how to better communicate browser-specific functionality to the user

--- a/public/manifest.v3.json
+++ b/public/manifest.v3.json
@@ -9,14 +9,15 @@
   },
   "permissions": [
     "storage",
-    "tabs"
+    "tabs",
+    "sidePanel"
   ],
   "background": {
     "service_worker": "background.js"
   },
   "action": {
     "default_icon": "tabeurator-48.png",
-    "default_popup": "sidebar.html"
+    "default_title": "Click to open panel"
   },
   "commands": {
     "_execute_action": {
@@ -40,6 +41,9 @@
       },
       "description": "Toggle Sidebar"
     }
+  },
+  "side_panel": {
+    "default_path": "sidebar.html"
   },
   "options_ui": {
     "page": "optionsPane.html",
